Regression: Edge Crease Doesn't Transfer #115105

Closed
opened 2023-11-18 18:14:43 +01:00 by Emir Sinan Gürlek · 1 comment

System Information
Operating system: Windows-10-10.0.19045-SP0 64 Bits
Graphics card: Quadro RTX 4000 with Max-Q Design/PCIe/SSE2 NVIDIA Corporation 4.6.0 NVIDIA 546.01

Blender Version
Broken: version: 4.0.0, branch: blender-v4.0-release, commit date: 2023-11-13 17:26, hash: 878f71061b8e
Worked: 3.6.5

Short description of error
Edge (Subdivision) Crease mesh data does not transfer using Link Transfer Mesh Data or Data Transfer Modifier.

Exact steps for others to reproduce the error
Add a cube and copy it. Select first cube, enter edit mode and add some edge creases. Select second cube in object mode, then shift select first cube, hit ctrl+L > Transfer Mesh Data (or Transfer Mesh Data Layout). Select Subdivision Crease as Data Type. Notice that new cube didn't get any edge creases. Same problem occurs with Data Transfer modifier as well.

**System Information** Operating system: Windows-10-10.0.19045-SP0 64 Bits Graphics card: Quadro RTX 4000 with Max-Q Design/PCIe/SSE2 NVIDIA Corporation 4.6.0 NVIDIA 546.01 **Blender Version** Broken: version: 4.0.0, branch: blender-v4.0-release, commit date: 2023-11-13 17:26, hash: `878f71061b8e` Worked: 3.6.5 **Short description of error** Edge (Subdivision) Crease mesh data does not transfer using Link Transfer Mesh Data or Data Transfer Modifier. **Exact steps for others to reproduce the error** Add a cube and copy it. Select first cube, enter edit mode and add some edge creases. Select second cube in object mode, then shift select first cube, hit ctrl+L > Transfer Mesh Data (or Transfer Mesh Data Layout). Select Subdivision Crease as Data Type. Notice that new cube didn't get any edge creases. Same problem occurs with Data Transfer modifier as well.
Emir Sinan Gürlek added the
Priority
Normal
Status
Needs Triage
Type
Report
labels 2023-11-18 18:14:44 +01:00
Iliya Katushenock changed title from Edge Crease Doesn't Transfer to Regression: Edge Crease Doesn't Transfer 2023-11-18 18:17:38 +01:00
Iliya Katushenock added the
Interest
Modeling
label 2023-11-18 18:17:42 +01:00
Member

Can confirm, will check (likely caused by e5ec04d73c).

Can confirm, will check (likely caused by e5ec04d73c7873498f4052cbb9f58acfdaf4b7b0).
Philipp Oeser added
Status
Confirmed
Module
Modeling
and removed
Status
Needs Triage
labels 2023-11-20 10:18:46 +01:00
Philipp Oeser self-assigned this 2023-11-20 10:18:55 +01:00
Philipp Oeser added
Priority
High
and removed
Priority
Normal
labels 2023-11-20 10:19:01 +01:00
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2023-11-20 13:33:42 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#115105
No description provided.